# nexus-agent

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py
app/agent/: graph.py
app/api/: app.py  routes_agent.py  routes_finance.py  routes_monitoring.py  schemas.py
app/ml/: finance_features.py  risk_model.py
app/services/: groq_client.py  metrics.py
app/tools/: __init__.py  finance.py  general.py
app/utils/: logging.py
nexus-agent-main/: requirements.txt
nexus-agent-main/app/api/: app.py  routes_finance.py
nexus-agent-main/static/: index.html
tests/: test_tools.py
tools/: __init__.py  add_dependencies.py  download_file.py  encode_image_to_base64.py  image_content_extracter.py  run_code.py  send_request.py  stock_data.py
